# python-package-manager-shootout

./: Dockerfile  Makefile  README.md  index.bb33a906.js  index.bb33a906.js.map  index.html  requirements.txt
.github/workflows/: benchmark.yml  deploy.yml
pdm/: pyproject.toml
poetry/: pyproject.toml
site/: index.html
