[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "19.2.0"
backoff = "1.11.1"
celery = "5.2.7"
django = "3.2.16"
django-oauth-toolkit = "1.7.0"
django-celery-beat = "2.3.0"
django-cors-headers = "3.13.0"
django-debug-toolbar = "3.5.0"
django-environ = "0.9.0"
django-tinymce = "3.4.0"
django-redis = "5.2.0"
djangorestframework = "3.13.1"
djangorestframework-dataclasses = "1.1.1"
dvc = {version = "2.10.2", extras = ["s3"]}
factory-boy = "3.2.1"
flower = "1.2.0"
gunicorn = "20.1.0"
httpx = "0.22.0"
httpx-auth = "0.14.1"
hypothesis = "6.36.1"
ipykernel = "5.3.0"
ipython = "7.14.0"
ipywidgets = "7.4.2"
jupytext = "1.13.6"
markdownify = "0.10.3"
mozilla-django-oidc = "2.0.0"
nbconvert = "6.5.0"
nbformat = "5.1.3"
notebook = "6.4.8"
psutil = "5.9.0"
psycopg2-binary = "2.9.3"
pycodestyle = "2.8.0"
pydantic = "1.10.2"
pylint = "2.12.2"
python-levenshtein = "0.12.2"
pyyaml = "6.0"
radon = "5.1.0"
requests = "2.27.1"
sentry-sdk = "0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
